# lunadev-2025

./: .gitignore  Cargo.toml  Makefile.toml  README.md  ele-app-config.toml  irl-stats.sh  lunabot.urdf  rust-toolchain.toml  setup.sh  test_to_request_access  usb-reset
.cargo/: config.toml
.devcontainer/: dev.dockerfile  devcontainer.json
.github/workflows/: build_and_release.yml
.zed/: settings.json
app-configs/: README.md
app-configs/ele/: app-config.toml
app-configs/lunabot/: app-config.toml
embedded/: .gitignore  Cargo.toml  diagram.json  rust-toolchain.toml  wokwi.toml
embedded/.cargo/: config.toml  config.toml.save
embedded/actuator/: Cargo.toml  README.md  build.rs
embedded/actuator/src/: main.rs  motor.rs
embedded/embedded_common/: Cargo.toml
embedded/embedded_common/src/: lib.rs
embedded/imu_chip/: Cargo.toml  README.md  build.rs  imu_listener.py  main.py
embedded/imu_chip/src/: main.rs  motor.rs
embedded/lsm6dsox/: Cargo.toml  README.md
embedded/lsm6dsox/src/: accel.rs  gyro.rs  lib.rs  register.rs  types.rs
embedded/v3pico/: Cargo.toml  README.md  build.rs
embedded/v3pico/src/: main.rs  motor.rs
embedded_common/: Cargo.toml
embedded_common/src/: lib.rs
examples/: app_config.toml
examples/serial-example/: Cargo.toml
examples/urobotics-tool/: Cargo.toml
examples/urobotics-tool/src/: main.rs
godot/lunabase/: auto_button.gd  lunabot.gd  (+11 more)
graphml/: bt.graphml  data.graphml  systems.graphml  tasks.graphml
lunabotics/cakap/: Cargo.toml
lunabotics/cakap/src/: lib.rs  main.rs
lunabotics/common/: Cargo.toml
lunabotics/common/src/: godot_urdf.rs  lib.rs  lunabase_sync.rs  lunasim.rs  ports.rs  thalassic.rs
lunabotics/ipc/: Cargo.toml  README.md  run_event_demo.sh
lunabotics/ipc/examples/: event_receiver.rs  event_sender.rs  receiver.rs  sender.rs
lunabotics/ipc/src/: lib.rs
lunabotics/lunabase-lib/: Cargo.toml
lunabotics/lunabase-lib/src/: audio.rs  config.rs  index.html  lib.rs  stream.rs  urdf.rs
lunabotics/lunabase-lib/src/stream/: index.html  webrtc.rs
lunabotics/lunabot/: Cargo.toml
lunabotics/lunabot-ai/: Cargo.toml
lunabotics/lunabot-ai/src/: blackboard.rs  drive.rs  lib.rs  pathfinding.rs  run.rs  teleop.rs  utils.rs
lunabotics/lunabot-ai/src/autonomy/: actions.rs  dig.rs  dump.rs  find_next_target.rs  find_path.rs  follow_path.rs  mod.rs  move_actuator.rs  traverse.rs
lunabotics/lunabot-ai/src/run/: dig.rs  dump.rs  mod.rs  traverse_obstacles.rs
lunabotics/lunabot-ai2/: Cargo.toml
lunabotics/lunabot-ai2/src/: context.rs  main.rs  software_stop.rs  teleop.rs
lunabotics/lunabot-ai2/src/teleop/: dig_dump.rs  dig_dump_simple.rs  navigate.rs
lunabotics/lunabot/src/: blackboard.rs  localization.rs  main.rs  motors.rs  pathfinding.rs  sim.rs  soft_stop.rs  teleop.rs  utils.rs  video.rs
lunabotics/lunabot/src/apps/: mod.rs  production.rs  sim.rs
lunabotics/lunabot/src/apps/production/: apriltag.rs  apriltag_pose.rs  audio_streaming.rs  camera.rs  dataviz.rs  depth.rs  frame_codec.rs  heat_logger.rs  motors.rs  rerun_viz.rs  rp2040.rs  streaming.rs
lunabotics/lunabot/src/apps/production/streaming/: audio.rs
lunabotics/lunabot/src/interfaces/: drive.rs  mod.rs  teleop.rs
lunabotics/lunabot/src/interfaces/obstacles/: heightmap.rs  mod.rs
lunabotics/lunabot/src/obstacles/: heightmap.rs  mod.rs
lunabotics/lunabot/src/pathfinding/: astar.rs  collections.rs  decimate.rs  mod.rs
lunabotics/lunabot/src/pipelines/: mod.rs  thalassic.rs
lunabotics/lunabot/src/run/: mod.rs
lunabotics/lunabot/src/setup/: mod.rs
lunabotics/lunabot/src/sim/: mod.rs
misc/byteable/byteable/: Cargo.toml
misc/byteable/byteable/src/: lib.rs
misc/byteable/byteable/tests/: derive_tests.rs  int_tests.rs
misc/cakap/: Cargo.toml
misc/cakap/src/: lib.rs
misc/cakap/src/layers/: ecc.rs  fragment.rs  mod.rs  reliable.rs  sequenced.rs  serde.rs  simulation.rs  udp.rs
misc/cakap/src/tests/: mod.rs
misc/fitter/: Cargo.toml
misc/fitter/src/: lib.rs  utils.rs
misc/k/: Cargo.toml
misc/k/src/: urdf.rs
misc/lsm6dsox/: Cargo.toml
misc/lsm6dsox/src/: accel.rs  lib.rs  register.rs  types.rs
misc/lumpur/: Cargo.toml
misc/lumpur/src/: config.rs  lib.rs  log.rs  main.rs  subprocess.rs
misc/thalassic/: Cargo.toml
misc/thalassic/src/: clustering.rs  depth2pcl.rs  expand_obstacles.rs  grad2obstacle.rs  height2grad.rs  lib.rs  main.rs  obstaclefilter.rs  pcl2height.rs  pcl2obstacle.rs  pcl2sum.rs  sum2height.rs
outreach/: README.md  lock.sh  unlock.sh
robot-layout/: ele.json  lunabot.json  sim.json
rp2040/: Cargo.toml
unros/: README.md
unros/localization/: Cargo.toml
urdf/: lunabot.urdf
urobotics-guide/: book.toml
urobotics/urobotics/: Cargo.toml
urobotics/urobotics-camera/: Cargo.toml
urobotics/urobotics-camera/src/: lib.rs
urobotics/urobotics-core/: Cargo.toml
urobotics/urobotics-core/src/: function.rs  lib.rs  runtime.rs  service.rs
urobotics/urobotics-core/src/cabinet/: mod.rs
urobotics/urobotics-core/src/callbacks/: callee.rs  caller.rs  exp.rs  mod.rs
urobotics/urobotics-core/src/callbacks/caller/: ext.rs  mod.rs
urobotics/urobotics-core/src/log/: metrics.rs  mod.rs
urobotics/urobotics-core/src/logging/: mod.rs
urobotics/urobotics-core/src/service/: mod.rs
urobotics/urobotics-core/src/state_machine/: mod.rs
urobotics/urobotics-learning/: Cargo.toml
urobotics/urobotics-learning/src/: lib.rs  multiples_of_two.rs  solutions.rs
urobotics/urobotics-learning/src/multiples_of_two/: mod.rs  solution.rs
urobotics/urobotics-learning/src/simbot/: mod.rs
urobotics/urobotics-learning/src/simbot/linear_maze/: mod.rs  solution.rs
urobotics/urobotics-learning/src/simbot/teleop/: mod.rs  solution.rs
urobotics/urobotics-realsense/: Cargo.toml
urobotics/urobotics-realsense/src/: lib.rs
urobotics/urobotics-serial/: Cargo.toml
urobotics/urobotics-serial/src/: lib.rs
urobotics/urobotics-video/: Cargo.toml
urobotics/urobotics-video/src/: error.rs  file.rs  info.rs  lib.rs  properties.rs  rtp.rs
urobotics/urobotics/src/: lib.rs
vesc-translator/: Cargo.toml
(+201 files in other folders)
