[workspace]
members = [
    "misc/compute-shader",
    "urobotics/urobotics-core",
    "urobotics/urobotics-smach",
    "urobotics/urobotics-video",
    "urobotics/urobotics-serial",
    "urobotics/urobotics-app",
    "examples/urobotics-tool",
    "urobotics/urobotics",
    "urobotics/urobotics-camera",
    "urobotics/urobotics-py",
    "urobotics/urobotics-apriltag",
    "misc/tasker",
    "lunabotics/cakap",
    "lunabotics/lunabot",
    "lunabotics/common",
    "lunabotics/pathfinding",
    "urobotics/urobotics-learning",
    "misc/fitter",
    "lunabotics/lunabase-lib",
    "lunabotics/lunasim-lib",
    "misc/k"
]
resolver = "2"
exclude = ["publishing/", "dump/", "lunabotics/lunabase/", "camera-db/"]


[workspace.dependencies]
fxhash = "0.2"
chrono = "0.4"
static_assertions = "1"
image = "0.25"
bitcode = "0.6.3"
ordered-float = "4.2.1"
nalgebra = { version = "0.32", features = [
    "serde-serialize",
    "convert-bytemuck",
] }
toml = "0.8"
serde = { version = "1", features = ["derive", "rc"] }
anyhow = "1"
crossbeam = "0.8"
quaternion-core = "0.4"
# tokio-stream = "0.1.15"
tokio = { version = "1", features = ["full"] }
# fast_image_resize = "2"
spin_sleep = "1"
rand = { version = "0.8", features = ["small_rng"] }
futures = "0.3.30"
serde-big-array = "0.5"
rand_distr = "0.4"
bytemuck = { version = "1", features = ["derive"] }
log = { version = "0.4", features = ["std"] }
# eigenvalues = { git = "https://github.com/Masterchef365/eigenvalues.git" }
ffmpeg-sidecar = "1.0"
# interprocess = { git = "https://github.com/kotauskas/interprocess", default-features = false, branch = "main", features = ["tokio"] }
rayon = "1.10.0"
bitvec = "1.0.1"
parking_lot = "0.12.2"
bytes = "1.6.0"
unfmt = "0.2.2"
heapless = "0.8.0"
indexmap = "2.3.0"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = ["experimental-threads"]}

k = { path = "misc/k" }
fitter = { path = "misc/fitter" }
bincode = "1.3.3"

compute-shader = { path = "misc/compute-shader" }
urobotics-core = { path = "urobotics/urobotics-core" }
urobotics-app = { path = "urobotics/urobotics-app" }
urobotics-serial = { path = "urobotics/urobotics-serial" }
urobotics-smach = { path = "urobotics/urobotics-smach" }
urobotics-video = { path = "urobotics/urobotics-video" }
urobotics = { path = "urobotics/urobotics" }
urobotics-camera = { path = "urobotics/urobotics-camera" }
urobotics-py = { path = "urobotics/urobotics-py" }
urobotics-realsense = { path = "urobotics/urobotics-realsense" }
tasker = { path = "misc/tasker" }
cakap = { path = "lunabotics/cakap" }
lunabase-lib = { path = "lunabotics/lunabase-lib" }

[profile.dev.package.lunabot]
opt-level = 3

[profile.release.package.lunabot]
debug = true
