[workspace]
members = [
    "misc/tasker",
    "lunabotics/lunabot",
    "lunabotics/common",
    "lunabotics/lunabase-lib",
    "lunabotics/lunasim-lib",
    "lunabotics/lunabot-ai",
    "misc/ares-bt",
    "misc/cakap2",
    "misc/gputter-core",
    "misc/gputter-macros",
    "misc/gputter",
    "misc/thalassic",
    "misc/lumpur",
    "misc/simple-motion",
    "misc/vesc-translator", "misc/imu-calib", "misc/camera-benchy",
    "misc/usb-reset"
]
resolver = "2"
exclude = ["output/", "embedded/", "lunaserver-web/"]

[workspace.dependencies]
fxhash = "0.2"
chrono = "0.4"
# static_assertions = "1"
# image = "0.25"
bitcode = "0.6.3"
# ordered-float = "4.2.1"
nalgebra = { version = "0.32", features = [
    "serde-serialize",
    "convert-bytemuck",
] }
toml = "0.8"
serde = { version = "1", features = ["derive"] }
anyhow = "1"
crossbeam = "0.8"
quaternion-core = "0.4"
tokio = { version = "1", features = ["full"] }
# fast_image_resize = "2"
spin_sleep = "1"
rand = { version = "0.8", features = ["small_rng"] }
# futures = "0.3.30"
# serde-big-array = "0.5"
# rand_distr = "0.4"
bytemuck = { version = "1", features = ["derive", "extern_crate_alloc"] }
# eigenvalues = { git = "https://github.com/Masterchef365/eigenvalues.git" }
rayon = "1.10.0"
parking_lot = "0.12.2"
# bytes = "1.6.0"
axum = { version = "0.7.7", features = ["ws", "macros"] }
unfmt = "0.2.2"
heapless = "0.8.0"
tracing = "0.1.41"
indexmap = "2.3.0"
godot = { git = "https://github.com/godot-rust/gdext", branch = "master", features = [
    "experimental-threads",
] }
openh264 = "0.6.3"
serde_json = "1.0.134"

glidesort = "0.1.2"
opus = "0.3.0"

tasker = { path = "misc/tasker" }
lumpur = { path = "misc/lumpur" }
cakap2 = { path = "misc/cakap2" }
lunabase-lib = { path = "lunabotics/lunabase-lib" }
ares-bt = { path = "misc/ares-bt" }
gputter = { path = "misc/gputter" }
thalassic = { path = "misc/thalassic" }
simple-motion = { path = "misc/simple-motion" }
vesc-translator = { path = "misc/vesc-translator" }
embedded_common = { path = "embedded/embedded_common" }
imu-calib ={ path = "misc/imu-calib" }

[profile.dev.package.lunabot]
opt-level = 2

[profile.dev.package.lunasim-lib]
opt-level = 3

[profile.dev.package.lunabase-lib]
opt-level = 3

[profile.release.package.lunabase-lib]
debug = true
debug-assertions = true

[profile.release.package.lunabot]
debug = true
debug-assertions = true

[profile.optdebug]
inherits = "dev"
opt-level = 3
lto = "thin"
