[package]
name = "imu_chip"
version = "0.1.0"
edition = "2021"


[dependencies]
cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }

# We're using a Pico by default on this template
rp-pico = "0.9"

# but you can use any BSP. Uncomment this to use the pro_micro_rp2040 BSP instead
# sparkfun-pro-micro-rp2040 = "0.8"

# If you're not going to use a Board Support Package you'll need these:
# rp2040-hal = { version="0.10", features=["rt", "critical-section-impl"] }
# rp2040-boot2 = "0.3"

panic-semihosting = "0.6.0"
embassy-executor = { version = "0.7.0", features = [
    "task-arena-size-98304",
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
] }
embassy-rp = { version = "0.3.0", features = [
    "defmt",
    "unstable-pac",
    "time-driver",
    "critical-section-impl",
    "rp2040",
] }
embassy-usb = { version = "0.2.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
static_cell = "2.1.0"
portable-atomic = { version = "1.5", features = ["critical-section"] }
embassy-time = "0.4.0"
lsm6dsox.workspace = true
#heapless.workspace = true
embassy-usb-logger = "0.2.0"
log.workspace = true
defmt.workspace = true
embedded_common.workspace = true

