[package]
name = "urobotics-tool"
version = "0.1.0"
edition = "2021"
description = "Tool for urobotics"

[dependencies]
urobotics = { workspace = true, features = ["serial", "app", "python"] }
serde.workspace = true
# urobotics-learning = { path = "../../urobotics/urobotics-learning" }

[package.metadata.cargo-machete]
ignored = ["serde"]