[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcode = { workspace = true }
simple-motion = { workspace = true, optional = true }
godot = { workspace = true, optional = true }
nalgebra.workspace = true
bytemuck = { workspace = true, optional = true }
brotli = { version = "7.0.0", optional = true }
tracing = { workspace = true, optional = true }
crossbeam = { workspace = true, optional = true }

[features]
godot_urdf = ["godot", "simple-motion"]
thalassic = ["bytemuck", "brotli", "tracing", "crossbeam"]