[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcode = { workspace = true }
nalgebra.workspace = true
bytemuck = { workspace = true, optional = true }
brotli = { version = "7.0.0", optional = true }
tracing = { workspace = true, optional = true }

[features]
lunabase_sync = ["bytemuck", "brotli", "tracing"]