[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
bitcode = { workspace = true }
nalgebra.workspace = true
embedded_common = { path = "../../embedded/embedded_common" }
bytemuck = { workspace = true, optional = true }
brotli = { version = "7.0.0", optional = true }
tracing = { workspace = true, optional = true }

[features]
lunabase_sync = ["bytemuck", "brotli", "tracing"]