[package]
name = "lunabase-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { workspace = true }
common = { path = "../common", features = ["lunabase_sync"]}
cakap2 = { workspace = true }
bitcode = { workspace = true }
tasker.workspace = true
crossbeam.workspace = true

openh264 = { workspace = true, optional = true }
opus = { workspace = true, optional = true }
# opus-static-sys = "1.0.1"

[features]
production = ["openh264"]