[package]
name = "lunabase-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]  # Compile this crate to a dynamic C library.

[dependencies]
godot = { workspace = true }
common = { path = "../common", features = ["lunabase_sync"]}
cakap2 = { workspace = true }
bitcode = { workspace = true }
tasker.workspace = true
crossbeam.workspace = true

serde = { workspace = true, optional = true }
openh264 = { workspace = true, optional = true }
opus = { workspace = true, optional = true }
fxhash = { workspace = true, optional = true }
toml = { workspace = true, optional = true }
simple-motion = { workspace = true, optional = true }
nalgebra = { workspace = true }

[features]
audio = ["opus"]
production = ["openh264", "audio", "serde", "fxhash", "toml", "simple-motion"]
