[package]
name = "lunabot-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
ares-bt = { workspace = true }
nalgebra = { workspace = true }
common = { path = "../common" }
embedded_common = { path = "../../embedded/embedded_common" }
tracing = { workspace = true }
simple-motion.workspace = true

[features]
# This is so that rust analyzer doesn't complain when enabling the "production" feature across all crates
production = []