[package]
name = "lunabot"
version = "0.1.0"
edition = "2021"

[dependencies]
urobotics = { workspace = true, features = [
    "serial",
    "python",
    "app",
    "video",
] }
serde = { workspace = true }
cakap2 = { workspace = true }
spin_sleep.workspace = true
anyhow = { workspace = true }
crossbeam = { workspace = true }
common = { path = "../common" }
pathfinding = { path = "../pathfinding" }
nalgebra = { workspace = true }
rayon = { workspace = true }
k = { workspace = true }
fxhash = { workspace = true }
vesc-translator = { workspace = true }
bitcode = { workspace = true }
thalassic.workspace = true
gputter.workspace = true
lunabot-ai = { path = "../lunabot-ai" }
tokio-serial = "5"
realsense-rust = { version = "1.2", optional = true }
urobotics-apriltag = { workspace = true, optional = true }
udev = { version = "0.9.1", optional = true }
v4l = { version = "0.14.0", optional = true }
openh264 = { version = "0.6.3", optional = true }
socketcan = "3.5.0"

[features]
production = ["realsense-rust", "urobotics-apriltag", "udev", "v4l", "openh264"]
