[package]
name = "lunabot"
version = "0.1.0"
edition = "2021"

[dependencies]
lumpur.workspace = true
tracing.workspace = true
tasker.workspace = true
serde = { workspace = true }
cakap2 = { workspace = true }
spin_sleep.workspace = true
anyhow = { workspace = true }
crossbeam = { workspace = true }
common = { path = "../common" }
# pathfinding = { path = "../pathfinding" }
pathfinding = "4.13.0"
nalgebra = { workspace = true }
rayon = { workspace = true }
fxhash = { workspace = true }
bitcode = { workspace = true }
thalassic.workspace = true
gputter.workspace = true
simple-motion.workspace = true
lunabot-ai = { path = "../lunabot-ai" }
rp2040 = {path = "../../rp2040"}
embedded_common = {path = "../../embedded_common"}
vesc_translator = { git = "https://github.com/Hydro111/vesc-translator.git", optional = true }
realsense-rust = { version = "1.2", optional = true }
udev = { version = "0.9.1", optional = true }
v4l = { version = "0.14.0", optional = true }
openh264 = { workspace = true, optional = true }

apriltag = { version = "0.4.0", optional = true }
apriltag-image = { version = "0.1.0", optional = true }
apriltag-nalgebra = { version = "0.1.0", optional = true }
arc-swap = "1.7.1"
opus = { workspace = true, optional = true }
rodio = { version = "0.20.1", optional = true }

[features]
production = ["realsense-rust", "udev", "v4l", "openh264", "vesc_translator", "apriltag", "apriltag-nalgebra", "apriltag-image"]
experimental = ["opus", "production", "rodio"]