[package]
name = "cakap"
version = "0.1.0"
edition = "2021"

[dependencies]
# serde = { workspace = true }
tokio = { workspace = true }
fxhash = { workspace = true }
bitcode = "0.6.0"
reed-solomon = { path = "../reed-solomon-rs" }
reed-solomon-erasure = { version = "4.0", features = [ "simd-accel" ] }
rand = { workspace = true }
indexmap = "2.2.6"
libc = "*"
parking_lot = { workspace = true }
crossbeam = { workspace = true }
# rkyv = "0.7.44"
bytemuck = { workspace = true }
[target.'cfg(windows)'.dependencies]
windows-sys = "*"
bytes = { workspace = true }
