[package]
name = "lsm6dsox"
version = "1.0.1"
description = "Platform-agnostic embedded-hal driver for the ST LSM6DSOX iNEMO inertial module"
authors = [
  "Fraunhofer IML Embedded Rust Group <embedded-rust@iml.fraunhofer.de>",
]
edition = "2018"
license = "OLFL-1.3"
repository = "https://git.openlogisticsfoundation.org/silicon-economy/libraries/serum/lsm6dsox"
categories = ["embedded", "no-std", "no-std::no-alloc"]
keywords = [
  "no_std",
  "sensor",
  "magnetometer",
  "accelerometer",
  "embedded-hal-driver",
]

[package.metadata.cargo-udeps.ignore]
#normal = []
development = [
  "embedded-hal-mock",
] # embedded-hal-mock is only used in tests and cargo-udeps cannot detect it (yet)
#build = []


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-hal = "1.0.0"
byteorder = { version = "1.4.0", default-features = false }
accelerometer = "0.12.0"
enumflags2 = "0.7.3"
measurements = "0.11"
num_enum = { version = "0.5", default-features = false }
defmt = "0.3.10"

[dev-dependencies]
embedded-hal-mock = "0.11.1"
