[package]
name = "lumpur"
version = "0.1.0"
edition = "2021"

[dependencies]
cursive = "0.21"
parking_lot.workspace = true
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
shared_memory = "0.12.4"
raw_sync = "0.1.5"
toml.workspace = true
serde.workspace = true
serde_json = "1.0.134"
