[package]
name = "thalassic"
version = "0.1.0"
edition = "2021"

[dependencies]
gputter.workspace = true
bytemuck.workspace = true
nalgebra.workspace = true
fxhash.workspace = true
# rayon.workspace = true
# linfa-clustering = "0.7.0"
# linfa = "0.7.0"
ndarray = "0.16"
glidesort.workspace = true
# linfa-datasets = { version = "0.7.0", features = ["generate"] }
# ndarray-rand = "0.15.0"
# rand_xoshiro = "0.6.0"
