[package]
name = "localization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
unros = { workspace = true }
nalgebra = { workspace = true }
rig = { workspace = true }
# quaternion-core = { workspace = true }
smach = { workspace = true }
fxhash = { workspace = true }
rand_distr = { workspace = true }
rand = { workspace = true }
eigenvalues = { git = "https://github.com/manglemix/eigenvalues.git" }
crossbeam = { workspace = true }
simba = { workspace = true }
# ordered-float = { workspace = true }