[package]
name = "urobotics-camera"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
urobotics-core = { workspace = true }
urobotics-py = { workspace = true }
urobotics-app = { workspace = true, optional = true }
urobotics-video = { workspace = true, optional = true }
image = { workspace = true }
nokhwa = { version = "0.10", features = ["input-native"] }
serde = { workspace = true }
fxhash = { workspace = true }
unfmt = { workspace = true }

[features]
standalone = ["urobotics-video", "urobotics-app"]
