[package]
name = "urobotics-core"
version = "0.1.0"
edition = "2021"

[dependencies]
fern = { version = "0.6", features = ["colored"] }
chrono = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
crossbeam = { workspace = true }
rand = { workspace = true }
# static_assertions = { workspace = true }
# console-subscriber = { version = "0.2", features = ["parking_lot"]}
serde = { workspace = true }
anyhow = { workspace = true }
image = { workspace = true, optional = false }
# spin_sleep = { workspace = true }
ffmpeg-sidecar = { workspace = true }
# srtlib = "0.1"
sysinfo = "0.30"
color-eyre = { version = "0.6", default-features = false }
ctrlc = "3.4.2"
rayon = { workspace = true }
nalgebra = { workspace = true }
simba = { workspace = true }
ordered-float = { workspace = true }
minifb = { git = "https://github.com/emoon/rust_minifb.git", rev = "633e6cd4f8f55fd9cbedc461976dde0f408bea35" }
parking_lot = { workspace = true }