[package]
name = "urobotics-core"
version = "0.1.0"
edition = "2021"

[dependencies]
# fern = { version = "0.6", features = ["colored"] }
chrono = { workspace = true }
fxhash = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
crossbeam = { workspace = true }
# serde = { workspace = true }
sysinfo = "0.30"
color-eyre = { version = "0.6", default-features = false }
ctrlc = "3.4.2"
rayon = { workspace = true }
parking_lot = { workspace = true }
static_assertions = { workspace = true }
futures = { workspace = true }
tasker = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
spin_sleep = { workspace = true }