[package]
name = "urobotics-core"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
fxhash = { workspace = true }
log = { workspace = true }
tokio = { workspace = true }
crossbeam = { workspace = true }
sysinfo = "0.30"
color-eyre = { version = "0.6", default-features = false }
rayon = { workspace = true }
parking_lot = { workspace = true }
futures = { workspace = true }
tasker = { workspace = true }
serde = { workspace = true }
bincode = "1.3.3"
