[package]
name = "urobotics-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
urobotics = { workspace = true, features = ["app"]}
serde = { workspace = true }
# tasker = { workspace = true }
rand = { workspace = true }
crossbeam = { workspace = true }
nalgebra = { workspace = true }
spin_sleep = { workspace = true }
indexmap = { workspace = true }
fxhash = { workspace = true }
heapless = { workspace = true }
toml = { workspace = true }