[package]
name = "urobotics-realsense"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { workspace = true }
nalgebra = { workspace = true }
urobotics-core = { workspace = true }
realsense-rust = { version = "1.2", features = ["buildtime-bindgen"] }

[target.'cfg(windows)'.dependencies]
bytemuck = { workspace = true }