[package]
name = "urobotics-serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-serial = "5"
urobotics-core = { workspace = true }
# tokio-util = { version = "0.7", features = ["codec"] }
# futures = "0.3"
# crossbeam = "0.8"
bytes = { workspace = true }
serde = { workspace = true }
crossbeam = { workspace = true }