[package]
name = "urobotics-serial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-serial = "5"
urobotics-core = { workspace = true }
urobotics-app = { workspace = true }
bytes = { workspace = true }
serde = { workspace = true }