[package]
name = "byteable"
version = "0.1.0"
edition = "2021"

[dependencies]
byteable-core = { path = "../byteable-core" }
byteable-derive = { path = "../byteable-derive", optional = true }
static_assertions = { workspace = true }
bincode = { workspace = true, optional = true }
bitcode = { workspace = true, optional = true }
serde = { workspace = true, optional = true }

[features]
default = ["derive"]
derive = ["byteable-derive"]
bincode = ["serde", "dep:bincode"]